--- a/game/hungerdotagames/scripts/kv/item_drops.kv
+++ b/game/hungerdotagames/scripts/kv/item_drops.kv
@@ -1,180 +1,205 @@
 "Drops" 
 { 
-    "npc_dota_neutral_kobold"
+    "npc_kobold"
     { 
-        "item_clarity" "40"
-						
+		"item_enchanted_mango" "70"		
+		"item_tango" "70"						
     }
 
-    "npc_dota_neutral_kobold_tunneler"
+	"npc_gnoll"
     { 
-		"item_tango" "40"
-						
-    }
-	
-	"npc_dota_neutral_satyr_trickster"
-    { 
-		"item_enchanted_mango" "40"
-	    "item_flask" "40"
-						
+        "item_clarity" "70"
+	    "item_flask" "70"						
     }
 
-	"npc_dota_neutral_fel_beast"
+	"npc_ogr"
     { 
-	    "item_flask" "40"
-		"item_smoke_of_deceit" "40"
-						
+		"item_phase_boots" "60"		
+		"item_power_treads" "60"											
+		"item_arcane_boots" "60"
+		"item_tranquil_boots" "60"						
     }
 
-	"npc_dota_neutral_wildkin"
+	"npc_ogr_mag"
     { 
-	    "item_flask" "40"
-		"item_phase_boots" "20"		
-						
-    }	
-	
-
-	"npc_dota_neutral_dark_troll"
-    { 
-	    "item_flask" "40"
-		"item_power_treads" "20"		
-						
+		"item_bottle" "70"											
+		"item_arcane_boots" "60"				
     }
 
-	"npc_dota_neutral_alpha_wolf"
+	"npc_ghost"
     { 
-		"item_lesser_crit" "50"
-						
-    }	
-	
-	"npc_dota_neutral_ogre_magi"
-    { 
-		"item_bottle" "40"	
-		"item_force_staff" "20"		
-						
+		"item_dust" "70"		
+		"item_smoke_of_deceit" "70"				
     }
 
-	"npc_dota_neutral_satyr_soulstealer"
+	"npc_women_ghost"
     { 
-		"item_ring_of_aquila" "40"
-		"item_yasha" "20"		
-						
-    }
-	
-	"npc_dota_neutral_harpy_storm"
-    { 
-		"item_arcane_boots" "20"	
-
-						
+		"item_gem" "100"			
     }	
 
-	"npc_dota_neutral_gnoll_assassin"
+	"npc_bess"
     { 
-		"item_tranquil_boots" "20"
-						
-    }
-	
-	"npc_dota_neutral_ogre_mauler"
-    { 
-		"item_medallion_of_courage" "40"
-		"item_sange" "20"		
-						
+		"item_medallion_of_courage" "100"			
     }	
-
-
-	"npc_dota_neutral_mud_golem"
-    { 
-		"item_buckler" "40"
-		"item_invis_sword" "20"		
 	
-						
-    }		
-		
-	
-	"npc_dota_neutral_ghost"
+	"npc_greevil"
     { 
-		"item_glimmer_cape" "20"
-		"item_hood_of_defiance" "20"		
-						
-    }		
-
-	"npc_dota_neutral_enraged_wildkin"
-    { 
-        "item_mask_of_madness" "30"
-		"item_cyclone" "30"		
-						
+		"item_ring_of_aquila" "100"			
     }
 
-	"npc_dota_neutral_dark_troll_warlord"
+	"npc_harpy"
     { 
-		"item_mekansm" "50"
-		"item_sheepstick" "30"		
-						
+		"item_force_staff" "100"		
+    }
+	
+	"npc_mouse"
+    { 
+		"item_headdress" "100"		
+    }
+
+	"npc_golem"
+    { 
+		"item_buckler" "100"			
+    }
+
+
+	"npc_fire_spirit"
+    { 
+		"item_ring_of_aquila" "100"			
+    }
+
+	"npc_mekansm"
+    { 
+		"item_mekansm" "100"			
+    }	
+	
+	"npc_wraith"
+    { 
+		"item_glimmer_cape" "100"		
+    }
+
+	"npc_pumpkin"
+    { 
+		"item_hood_of_defiance" "100"		
     }	
 
-	"npc_dota_neutral_satyr_hellcaller"
+	"npc_undying"
     { 
-		"item_gem" "30"
-		"item_helm_of_the_dominator" "30"		
-						
+		"item_vanguard" "100"		
     }	
-
-	"npc_dota_neutral_centaur_khan"
+	
+	"npc_zombie"
     { 		
-		"item_blade_mail" "30"
-		"item_basher" "30"			
-						
+	    "item_flask" "100"		
+	}	
+
+	"npc_skeleton_king"
+    { 		
+		"item_black_king_bar" "100"	
+	}
+	
+	"npc_skeleton"
+    { 
+	    "item_flask" "100"						
     }
 	
-	"npc_dota_neutral_polar_furbolg_ursa_warrior"
+	"npc_centaur"
     { 
-		"item_vladmir" "30"		
-		"item_armlet" "30"
-						
+		"item_blade_mail" "100"						
     }
 	
-	"npc_dota_neutral_black_dragon"
+	"npc_junior_centaur"
     { 
-		"item_ultimate_scepter" "50"
-		"item_diffusal_blade" "70"
-		"item_blink" "30"		
-						
+	    "item_flask" "100"						
+    }
+
+	"npc_vulture"
+    { 
+		"item_cyclone" "100"						
+    }
+
+	"npc_ancestral_spirit"
+    { 
+		"item_ultimate_scepter" "100"						
+    }
+
+	"npc_ghost_frost"
+    { 
+	    "item_flask" "100"						
+    }
+
+	"npc_necromancer"
+    { 
+		"item_sheepstick" "100"						
     }
 	
-	"npc_dota_neutral_granite_golem"
+	"npc_earthspirit"
     { 
-
-		"item_ethereal_blade" "50"
-		"item_black_king_bar" "30"			
-		"item_maelstrom" "70"
-
-						
+		"item_yasha" "70"					
     }
 
+	"npc_firespirit"
+    { 
+		"item_sange" "70"					
+    }
+
+	"npc_windspirit"
+    { 
+		"item_diffusal_blade" "70"					
+    }
+
+	"npc_bear"
+    { 
+		"item_armlet" "100"					
+    }
+
+	"npc_death_prophet_ghost"
+    { 
+		"item_invis_sword" "100"					
+    }
+
+	"npc_wolf"
+    { 
+		"item_lesser_crit" "70"				
+    }
+
+	"npc_walking_cobblestone"
+    { 
+		"item_basher" "100"				
+    }
+
+	"npc_water_element"	
+    { 
+ 		"item_ethereal_blade" "100"				
+    }
+
+	"npc_gargoyle"
+    { 
+		"item_maelstrom" "100"				
+    }
+
+	"npc_stalker"
+    { 
+        "item_mask_of_madness" "60"	
+		"item_helm_of_the_dominator" "60"			
+		"item_vladmir" "60"				
+    }
+
+	
 ////////////////////////////////
 ///////Custom
 ////////////////////////////////
 	
 	"npc_spider"
     { 		
-		"item_ward_observer" "40"
-		"item_ward_sentry" "40"
-		"item_orb_of_venom" "20"	
+		"item_ward_observer" "70"
+		"item_ward_sentry" "70"
+		"item_orb_of_venom" "70"	
 	}
 
-	"npc_skeleton"
-    { 
-		"item_headdress" "40"	
-	    "item_flask" "70"
-						
-    }
+
 	
-	"npc_zombie"
-    { 		
-		"item_dust" "40"
-		"item_vanguard" "20"
-		
-	}
+
 	
 
 	
